--- a/ansible/roles/cje/defaults/main.yml
+++ b/ansible/roles/cje/defaults/main.yml
@@ -1,4 +1,5 @@
 configs: [
+  { src: "config.xml", dir: "/data/jenkins", file: "config.xml" },
   { src: "credentials.xml", dir: "/data/jenkins", file: "credentials.xml" },
   { src: "docker-traceability.xml", dir: "/data/jenkins", file: "docker-traceability.xml" },
   { src: "node-production.xml", dir: "/data/jenkins/nodes/node-production", file: "config.xml", ip: "10.100.198.200", node_name: "node-production" },
@@ -16,3 +17,4 @@ configs: [
 plugins:
  - docker-custom-build-environment
  - build-pipeline-plugin
+ - mock-security-realm
