--- a/ansible/roles/docker-compose/tasks/main.yml
+++ b/ansible/roles/docker-compose/tasks/main.yml
@@ -1,6 +1,5 @@
 - name: Executable is present
-  copy:
-    src: docker-compose
+  get_url:
+    url: https://github.com/docker/compose/releases/download/1.6.2/docker-compose-Linux-x86_64
     dest: /usr/local/bin/docker-compose
     mode: 0755
-  tags: [docker]
