--- a/ansible/roles/cje/defaults/main.yml
+++ b/ansible/roles/cje/defaults/main.yml
@@ -2,8 +2,8 @@ configs: [
   { src: "config.xml", dir: "/data/jenkins", file: "config.xml" },
   { src: "credentials.xml", dir: "/data/jenkins", file: "credentials.xml" },
   { src: "docker-traceability.xml", dir: "/data/jenkins", file: "docker-traceability.xml" },
-  { src: "node-production.xml", dir: "/data/jenkins/nodes/node-production", file: "config.xml", ip: "10.100.198.200", node_name: "node-production" },
-  { src: "node-cd.xml", dir: "/data/jenkins/nodes/node-cd", file: "config.xml", ip: "10.100.198.200", node_name: "node-cd" },
+  { src: "node-production.xml", dir: "/data/jenkins/nodes/node-production", file: "config.xml", node_name: "node-production" },
+  { src: "node-cd.xml", dir: "/data/jenkins/nodes/node-cd", file: "config.xml", node_name: "node-cd" },
   { src: "docker-pipeline-config.xml", dir: "/data/jenkins/jobs/docker-pipeline", file: "config.xml" },
   { src: "books-ms-build-config.xml", dir: "/data/jenkins/jobs/docker-pipeline/jobs/books-ms-build", file: "config.xml" },
   { src: "books-ms-push-config.xml", dir: "/data/jenkins/jobs/docker-pipeline/jobs/books-ms-push", file: "config.xml" },
