--- a/ansible/roles/cje/tasks/main.yml
+++ b/ansible/roles/cje/tasks/main.yml
@@ -2,8 +2,7 @@
   file:
     path: /data/jenkins
     state: directory
-    owner: vagrant
-  tags: [jenkins]
+    owner: "{{ user }}"
 
 - name: Container is running
   docker:
@@ -12,47 +11,42 @@
     ports: "8080:8080"
     volumes:
       - /data/jenkins:/var/jenkins_home
-      - /vagrant/.vagrant/machines:/machines
   register: jenkins_result
-  tags: [jenkins]
 
 - pause:
-    prompt: "Make sure that CJE in http://{{ facter_ipaddress_eth1 }}:8080 is licenced. Press any key when finished."
+    prompt: "Make sure that CJE running on port 8080 is licenced. Press any key when finished."
   when: jenkins_result|changed and not skip_licence is defined
 
 - name: Configuration directories are created
   file:
     path: "{{ item.dir }}"
     state: directory
-    owner: vagrant
+    owner: "{{ user }}"
     mode: 0777
     recurse: yes
   with_items: configs
   when: not skip_licence is defined
-  tags: [jenkins]
 
 - name: Configurations are present
   template:
     src: "{{ item.src }}"
     dest: "{{ item.dir }}/{{ item.file }}"
-    owner: vagrant
+    owner: "{{ user }}"
     mode: 0777
   register: configs_result
   with_items: configs
   when: not skip_licence is defined
-  tags: [jenkins]
 
 - name: Plugins are installed
   shell: "curl -X POST \
     -d '<jenkins><install plugin=\"{{ item }}@latest\" /></jenkins>' \
     --header 'Content-Type: text/xml' \
-    http://{{ facter_ipaddress_eth1 }}:8080/pluginManager/installNecessaryPlugins"
+    http://localhost:8080/pluginManager/installNecessaryPlugins"
   args:
     creates: /data/jenkins/plugins/{{ item }}
   with_items: plugins
   register: plugins_result
   when: not skip_licence is defined
-  tags: [jenkins]
 
 - wait_for:
     path: /data/jenkins/plugins/{{ item }}
@@ -60,9 +54,10 @@
   with_items: plugins
 
 - name: Jenkins is restarted
-  shell: "curl -X POST http://{{ facter_ipaddress_eth1 }}:8080/safeRestart"
+  shell: "curl -X POST http://localhost:8080/safeRestart"
   when: (configs_result|changed or plugins_result|changed) and not skip_licence is defined
 
 - debug:
-    msg: "Please open http://{{ facter_ipaddress_eth1 }}:8080"
+    msg: "Please open CJE running on port 8080"
   when: not skip_licence is defined
+
