--- a/ansible/roles/java/tasks/main.yml
+++ b/ansible/roles/java/tasks/main.yml
@@ -1,6 +1,4 @@
 - name: Package is present
   apt:
     name: openjdk-7-jdk
-    state: present
-  with_items: packages
-  tags: [java]
+    update_cache: yes
