--- a/ansible/roles/aws/tasks/main.yml
+++ b/ansible/roles/aws/tasks/main.yml
@@ -17,6 +17,10 @@
         to_port: 443
         cidr_ip: 0.0.0.0/0
       - proto: tcp
+        from_port: 8000
+        to_port: 8000
+        cidr_ip: 0.0.0.0/0
+      - proto: tcp
         from_port: 8080
         to_port: 8080
         cidr_ip: 0.0.0.0/0
@@ -54,6 +58,3 @@
     timeout: 500
     state: started
   with_items: ec2.instances
-
-- pause: minutes=3
-  when: ec2|changed
