--- a/ansible/roles/cje/defaults/main.yml
+++ b/ansible/roles/cje/defaults/main.yml
@@ -1,20 +1,21 @@
 configs: [
-  { src: "config.xml", dir: "/data/jenkins", file: "config.xml" },
-  { src: "credentials.xml", dir: "/data/jenkins", file: "credentials.xml" },
-  { src: "docker-traceability.xml", dir: "/data/jenkins", file: "docker-traceability.xml" },
-  { src: "node-production.xml", dir: "/data/jenkins/nodes/node-production", file: "config.xml", node_name: "node-production" },
-  { src: "node-cd.xml", dir: "/data/jenkins/nodes/node-cd", file: "config.xml", node_name: "node-cd" },
-  { src: "docker-pipeline-config.xml", dir: "/data/jenkins/jobs/docker-pipeline", file: "config.xml" },
-  { src: "books-ms-build-config.xml", dir: "/data/jenkins/jobs/docker-pipeline/jobs/books-ms-build", file: "config.xml" },
-  { src: "books-ms-push-config.xml", dir: "/data/jenkins/jobs/docker-pipeline/jobs/books-ms-push", file: "config.xml" },
-  { src: "books-ms-deploy-config.xml", dir: "/data/jenkins/jobs/docker-pipeline/jobs/books-ms-deploy", file: "config.xml" },
-  { src: "books-ms-integrate-config.xml", dir: "/data/jenkins/jobs/docker-pipeline/jobs/books-ms-integrate", file: "config.xml" },
-  { src: "books-ms-workflow-simple-config.xml", dir: "/data/jenkins/jobs/books-ms-workflow-simple", file: "config.xml" },
-  { src: "books-ms-workflow-config.xml", dir: "/data/jenkins/jobs/books-ms-workflow", file: "config.xml" },
-  { src: "workflow-common.groovy", dir: "/data/scripts", file: "workflow-common.groovy" }
+  { src: "config.xml", dir: "/mnt/jenkins", file: "config.xml" },
+  { src: "credentials.xml", dir: "/mnt/jenkins", file: "credentials.xml" },
+  { src: "docker-traceability.xml", dir: "/mnt/jenkins", file: "docker-traceability.xml" },
+  { src: "node-production.xml", dir: "/mnt/jenkins/nodes/node-production", file: "config.xml", node_name: "node-production" },
+  { src: "node-cd.xml", dir: "/mnt/jenkins/nodes/node-cd", file: "config.xml", node_name: "node-cd" },
+  { src: "docker-pipeline-config.xml", dir: "/mnt/jenkins/jobs/docker-pipeline", file: "config.xml" },
+  { src: "books-ms-build-config.xml", dir: "/mnt/jenkins/jobs/docker-pipeline/jobs/books-ms-build", file: "config.xml" },
+  { src: "books-ms-push-config.xml", dir: "/mnt/jenkins/jobs/docker-pipeline/jobs/books-ms-push", file: "config.xml" },
+  { src: "books-ms-deploy-config.xml", dir: "/mnt/jenkins/jobs/docker-pipeline/jobs/books-ms-deploy", file: "config.xml" },
+  { src: "books-ms-integrate-config.xml", dir: "/mnt/jenkins/jobs/docker-pipeline/jobs/books-ms-integrate", file: "config.xml" },
+  { src: "books-ms-pipeline-simple-config.xml", dir: "/mnt/jenkins/jobs/books-ms-pipeline-simple", file: "config.xml" },
+  { src: "books-ms-pipeline-config.xml", dir: "/mnt/jenkins/jobs/books-ms-pipeline", file: "config.xml" },
+  { src: "pipeline-common.groovy", dir: "/mnt/scripts", file: "pipeline-common.groovy" }
 ]
 
 plugins:
  - docker-custom-build-environment
  - build-pipeline-plugin
  - mock-security-realm
+ - docker-commons
