--- a/ansible/roles/docker/templates/docker.cfg
+++ b/ansible/roles/docker/templates/docker.cfg
@@ -1,1 +1,1 @@
-DOCKER_OPTS="$DOCKER_OPTS --insecure-registry localhost:5000"
+DOCKER_OPTS="$DOCKER_OPTS --insecure-registry localhost:5000 -g /mnt/docker"
