--- a/ansible/roles/docker/tasks/main.yml
+++ b/ansible/roles/docker/tasks/main.yml
@@ -1,45 +1,58 @@
+- name: Create docker data directory
+  file:
+    path: /mnt/data/docker
+    owner: root
+    group: root
+    state: directory
+    mode: 0700
+
+- name: Store docker files in data disk
+  file:
+    src: /mnt/data/docker
+    dest: /var/lib/docker
+    state: link
+
 - name: Debian add Docker repository and update apt cache
   apt_repository:
     repo: deb https://apt.dockerproject.org/repo ubuntu-trusty main
     update_cache: yes
     state: present
-  tags: [docker]
 
-- name: Debian Docker is present
+- name: linux-image-extra is present
+  apt:
+    name: linux-image-extra-{{ ansible_kernel }}
+
+- name: docker-engine is present
   apt:
     name: docker-engine
     state: latest
     force: yes
-  tags: [docker]
 
 - name: Debian python-pip is present
-  apt: name=python-pip state=present
-  tags: [docker]
+  apt:
+    name: python-pip
+    state: present
 
 - name: Debian docker-py is present
   pip:
     name: docker-py
     version: 1.6.0
     state: present
-  tags: [docker]
 
 - name: Debian files are present
   template:
     src: docker.cfg
     dest: /etc/default/docker
   register: copy_result
-  tags: [docker]
 
 - name: User is added to the docker group
   user:
     name: "{{ user }}"
     group: docker
   register: user_result
-  tags: [docker]
 
 - name: Debian Docker service is restarted
   service:
     name: docker
     state: restarted
   when: copy_result|changed or user_result|changed
-  tags: [docker]
