--- a/ansible/roles/nginx/defaults/main.yml
+++ b/ansible/roles/nginx/defaults/main.yml
@@ -2,17 +2,17 @@ ports:
   - '80:80'
 
 directories:
-  - /data/nginx/conf.d
-  - /data/nginx/includes
-  - /data/nginx/logs
-  - /data/nginx/upstreams
-  - /data/nginx/templates
+  - /mnt/nginx/conf.d
+  - /mnt/nginx/includes
+  - /mnt/nginx/logs
+  - /mnt/nginx/upstreams
+  - /mnt/nginx/templates
 
 files: [
-  {src: 'services.conf', dest: '/data/nginx/conf.d/services.conf'}
+  {src: 'services.conf', dest: '/mnt/nginx/conf.d/services.conf'}
 ]
 
 volumes:
-  - /data/nginx/conf.d:/etc/nginx/conf.d
-  - /data/nginx/includes:/etc/nginx/includes
-  - /data/nginx/upstreams:/etc/nginx/upstreams
+  - /mnt/nginx/conf.d:/etc/nginx/conf.d
+  - /mnt/nginx/includes:/etc/nginx/includes
+  - /mnt/nginx/upstreams:/etc/nginx/upstreams
