--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ tests:
     - ./src:/source/src
     - ./target/scala-2.10:/source/target/scala-2.10
     - ./client/wct-complete.conf.js:/source/client/wct.conf.js
-    - /data/tests/db:/data/db
+    - /mnt/tests/db:/data/db
   environment:
     - TEST_TYPE=all
 
