Added updated screenshots

--- a/ansible/roles/users/tasks/main.yml
+++ b/ansible/roles/users/tasks/main.yml
@@ -4,6 +4,7 @@
     password: "{{ password }}"
     shell: /bin/bash
     group: docker
+    groups: sudo
     append: yes
 
 - name: Allow password authentication
