--- a/ansible/aws.yml
+++ b/ansible/aws.yml
@@ -3,8 +3,8 @@
   gather_facts: False
   vars:
     - ami_id: ami-ad8894c1
-    - instance_type: m3.large
-#    - instance_type: m3.xlarge
+#    - instance_type: m3.large
+    - instance_type: m3.xlarge
 #    - instance_type: m3.2xlarge
     - instances: 1
     - aws_region: eu-central-1
