--- a/ansible/roles/aws/tasks/main.yml
+++ b/ansible/roles/aws/tasks/main.yml
@@ -18,22 +18,26 @@
       - proto: tcp
         from_port: 80
         to_port: 80
-        cidr_ip: 0.0.0.0/0
+        cidr_ip: 0.0.0.0/32
       - proto: tcp
         from_port: 443
         to_port: 443
-        cidr_ip: 0.0.0.0/0
+        cidr_ip: 0.0.0.0/32
       - proto: tcp
         from_port: 8000
         to_port: 8000
-        cidr_ip: 0.0.0.0/0
+        cidr_ip: 0.0.0.0/32
       - proto: tcp
         from_port: 8080
-        to_port: 8081
+        to_port: 8080
         cidr_ip: 0.0.0.0/0
+      - proto: tcp
+        from_port: 8081
+        to_port: 8081
+        cidr_ip: 0.0.0.0/32
     rules_egress:
       - proto: all
-        cidr_ip: 0.0.0.0/0
+        cidr_ip: 0.0.0.0/32
   register: basic_firewall
 
 - name: Create instances
