--- a/ansible/aws.yml
+++ b/ansible/aws.yml
@@ -9,6 +9,7 @@
     - aws_key_name: jenkins-training-key
     - aws_group: jenkins-training-group
     - subnet_id: subnet-c9888fbf
+    - vpc_id: vpc-dc3890bb
   roles:
     - aws
 
