--- a/ansible/roles/cje/tasks/main.yml
+++ b/ansible/roles/cje/tasks/main.yml
@@ -13,9 +13,8 @@
       - /mnt/jenkins:/var/jenkins_home
   register: jenkins_result
 
-- pause:
-    prompt: "Make sure that CJE running on port 8080 is licenced. Press any key when finished."
-  when: jenkins_result|changed and not skip_licence is defined
+- name: Wait for the license.xml file, please register your jenkins on port 8080.
+  wait_for: path=/mnt/jenkins/license.xml
 
 - name: Configuration directories are created
   file:
