[OPS-923] Use t2.small as of now

--- a/ansible/aws.yml
+++ b/ansible/aws.yml
@@ -5,7 +5,7 @@
     # - ami_id: ami-4124d82c (paravirtual)
     # - ami_id: ami-452bd728 (hvm)
     - ami_id: ami-452bd728
-    - instance_type: t2.micro
+    - instance_type: t2.small
     - instances: 1
     - aws_region: us-east-1
     - aws_key_name: jenkins-training-key
