[OPS-923] Specify volume_size in ec2 too

--- a/ansible/roles/aws/tasks/main.yml
+++ b/ansible/roles/aws/tasks/main.yml
@@ -49,6 +49,7 @@
     image: "{{ ami_id }}"
     vpc_subnet_id: "{{ subnet_id }}"
     assign_public_ip: yes
+    volume_size: "{{ volume_size }}"
     wait: true
     exact_count: "{{ instances }}"
     count_tag:
