[OPS-923] Use the correct syntax

--- a/ansible/roles/aws/tasks/main.yml
+++ b/ansible/roles/aws/tasks/main.yml
@@ -49,7 +49,10 @@
     image: "{{ ami_id }}"
     vpc_subnet_id: "{{ subnet_id }}"
     assign_public_ip: yes
-    volume_size: "{{ volume_size }}"
+    volumes:
+      - device_name: /dev/xvda
+        volume_type: gp2
+        volume_size: "{{ volume_size }}"
     wait: true
     exact_count: "{{ instances }}"
     count_tag:
