--- a/ansible/roles/cje/tasks/main.yml
+++ b/ansible/roles/cje/tasks/main.yml
@@ -14,7 +14,7 @@
   register: jenkins_result
 
 - name: Time for register your jenkins. Open it on 8080.
-  debug: "Please register your CJE on {{ ansible_hostname }}:8080"
+  debug: msg="Please register your CJE on {{ ansible_hostname }}:8080"
 
 - command: cat /mnt/jenkins/license.xml
   register: log_output
